--- a/Unidad3/.gitignore
+++ b/Unidad3/.gitignore
@@ -1,3 +1,7 @@
 /Arma.class
 /EjemploUsoObjeto.class
 /Personajes.class
+/Calcualadora.class
+/EjemploUsoPersonajes.class
+/EjemploUsoCalculadora.class
+/Calculadora.class
