--- a/Unidad3/.gitignore
+++ b/Unidad3/.gitignore
@@ -5,3 +5,9 @@
 /EjemploUsoPersonajes.class
 /EjemploUsoCalculadora.class
 /Calculadora.class
+/EjemploUsoPersonaje.class
+/mundo.class
+/Enemigo.class
+/Personaje.class
+/Mundo.class
+/EjemploMundo.class
